add an API to kick off validation
This API creates a workflow for Firmware Validation. Currently it only
replicates `firmwareInstall` as there is no actual controller for
firmware validation yet, but adding such should be straightforward.

I included a status API that is unimplemented. I'm not sure it's needed
yet.

add swagger annotations, remove status api
